--- a/CodeBlock.UnitTests.ObjectModel/CodeBlock.UnitTests.ObjectModel.fsproj
+++ b/CodeBlock.UnitTests.ObjectModel/CodeBlock.UnitTests.ObjectModel.fsproj
@@ -8,12 +8,13 @@
     <OutputType>Library</OutputType>
     <RootNamespace>CodeBlock.UnitTests.ObjectModel</RootNamespace>
     <AssemblyName>CodeBlock.UnitTests.ObjectModel</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <Name>FShapUnitTest</Name>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
-    <TargetFSharpCoreVersion>4.3.0.0</TargetFSharpCoreVersion>
+    <TargetFSharpCoreVersion>4.4.1.0</TargetFSharpCoreVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -52,7 +53,6 @@
     </Otherwise>
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
-  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <ItemGroup>
     <Compile Include="ObjectModelTestCore.fs" />
     <Compile Include="Arrays.fs" />
@@ -67,6 +67,18 @@
   <ItemGroup>
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
+    </Reference>
+    <Reference Include="LLVM">
+      <HintPath>..\packages\LLVM.0.1.0\lib\LLVM.dll</HintPath>
+    </Reference>
+    <Reference Include="LLVM.NativeLibrary">
+      <HintPath>..\packages\LLVM.NativeLibrary.0.1.0.1\lib\LLVM.NativeLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="Lost.FSharp">
+      <HintPath>..\packages\Lost.FSharp.1.2.1\lib\net40\Lost.FSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="Lost.Native">
+      <HintPath>..\packages\Lost.Native.0.0.4\lib\Lost.Native.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Mono.Cecil">
@@ -89,21 +101,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
-    <ProjectReference Include="..\..\LLVM\LLVM.NET\LLVM.NativeLibrary\LLVM.NativeLibrary.csproj">
-      <Name>LLVM.NativeLibrary</Name>
-      <Project>{6bb50a0f-7ac3-4dfc-bbdc-9f57a65d243f}</Project>
-      <Private>True</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\..\LLVM\LLVM.NET\LLVM\LLVM.csproj">
-      <Name>LLVM</Name>
-      <Project>{218e291b-4ee7-4526-b4f6-ef72fde40e90}</Project>
-      <Private>True</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\..\LostLib\Lost.FSharp\Lost.FSharp.fsproj">
-      <Name>Lost.FSharp</Name>
-      <Project>{5fda54e6-3f01-43a9-b4d9-5a1f61bb557f}</Project>
-      <Private>True</Private>
-    </ProjectReference>
     <ProjectReference Include="..\CodeBlock.BasicObjectModel\CodeBlock.BasicObjectModel.fsproj">
       <Name>CodeBlock.BasicObjectModel</Name>
       <Project>{e0bec535-39ee-4966-890e-b3d33de2970d}</Project>
@@ -117,6 +114,11 @@
     <ProjectReference Include="..\CodeBlock.GC\CodeBlock.GC.fsproj">
       <Name>CodeBlock.GC</Name>
       <Project>{71506e28-8a8b-4894-9912-1f9fa97ec4e1}</Project>
+      <Private>True</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\CodeBlock.LLVM\CodeBlock.LLVM.fsproj">
+      <Name>CodeBlock.LLVM</Name>
+      <Project>{b27dfe2c-a73b-4ffa-ba6d-915bd3bd89cb}</Project>
       <Private>True</Private>
     </ProjectReference>
     <ProjectReference Include="..\CodeBlock.Tests\CodeBlock.Tests.fsproj">
