--- a/CodeBlock.Tests/packages.config
+++ b/CodeBlock.Tests/packages.config
@@ -5,5 +5,6 @@
   <package id="FSPowerPack.Linq.Community" version="3.0.0.0" targetFramework="net45" />
   <package id="FSPowerPack.Metadata.Community" version="3.0.0.0" targetFramework="net45" />
   <package id="FSPowerPack.Parallel.Seq.Community" version="3.0.0.0" targetFramework="net45" />
+  <package id="LLVM" version="0.1.0" targetFramework="net462" />
   <package id="Mono.Cecil" version="0.9.5.4" targetFramework="net45" />
 </packages>
