--- a/CodeBlock.TypeSystem/CodeBlock.TypeSystem.fsproj
+++ b/CodeBlock.TypeSystem/CodeBlock.TypeSystem.fsproj
@@ -65,6 +65,9 @@
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
     </Reference>
+    <Reference Include="Lost.FSharp">
+      <HintPath>..\packages\Lost.FSharp.1.2.1\lib\net40\Lost.FSharp.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.Cecil">
       <HintPath>..\packages\Mono.Cecil.0.9.5.4\lib\net40\Mono.Cecil.dll</HintPath>
       <Private>True</Private>
@@ -86,11 +89,6 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\LostLib\Lost.FSharp\Lost.FSharp.fsproj">
-      <Name>Lost.FSharp</Name>
-      <Project>{5fda54e6-3f01-43a9-b4d9-5a1f61bb557f}</Project>
-      <Private>True</Private>
-    </ProjectReference>
     <ProjectReference Include="..\CodeBlock.Core\CodeBlock.Core.fsproj">
       <Name>CodeBlock.Core</Name>
       <Project>{2c47eef7-a57e-48da-b445-8ca66652c0c5}</Project>
