--- a/CodeBlock.UnitTests.ObjectModel/CodeBlock.UnitTests.ObjectModel.fsproj
+++ b/CodeBlock.UnitTests.ObjectModel/CodeBlock.UnitTests.ObjectModel.fsproj
@@ -63,6 +63,7 @@
       <SubType>Test</SubType>
     </Compile>
     <None Include="packages.config" />
+    <Content Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
